modules/libjar/nsJARChannel.h
@@ -134,8 +134,11 @@ private:
     nsCString                       mJarEntry;
     nsCString                       mInnerJarEntry;
 
-    nsRefPtr<nsInputStreamPump> mSynthesizedResponsePump;
-    int64_t mSynthesizedStreamLength;
+    nsRefPtr<nsInputStreamPump>     mSynthesizedResponsePump;
+    int64_t                         mSynthesizedStreamLength;
+
+    // True if this channel should skip any interception checks.
+    bool                            mForceNoIntercept;
 
     friend class mozilla::net::InterceptedJARChannel;
 };
